force-app/main/default/objects/EstateAcc__c.object
<CustomObject>
    <fields>
        <fullName>BV_Case__c</fullName>
        <label>BV Case</label>
        <referenceTo>BV_Case__c</referenceTo>
        <relationshipName>EstateAccruals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_of_Death_Summary__c</fullName>
        <label>Balance of Accruals</label>
        <summarizedField>Asset__c.Date_of_Death_Value__c</summarizedField>
        <summaryForeignKey>Asset__c.Estate_and_Accrual__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deeds__c</fullName>
        <label>Deeds</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jewellery__c</fullName>
        <label>Jewellery</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keys__c</fullName>
        <label>Keys</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Liability_at_Date_of_Death_Summary__c</fullName>
        <label>Balance of Liabilities</label>
        <summarizedField>Liability__c.Liability_at_Date_of_Death__c</summarizedField>
        <summaryForeignKey>Liability__c.Estate_and_Accrual__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NINO__c</fullName>
        <label>NINO</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Estate and Accrual</label>
    <nameField>
        <label>EstateAcc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estate and Accruals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>